Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-507

INKUrlHostSet does not work in INK_HTTP_READ_REQUEST_PRE_REMAP_HOOK

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.1.3
    • 2.1.4
    • None
    • None

    Description

      As of the transparent proxy merge (TS-291, SVN commit # 992187), the attached code (see separate attachment) does not long work. Basically, the plugin is intended to run instead of a "remap" rule, in a INK_HTTP_READ_REQUEST_PRE_REMAP_HOOK. With versions of ATS before this TS-291 commit, it works fine (it'll set the URL and Host: header properly), but after this commit, it breaks.

      Going back to earlier ATS versions do not show this problem.

      Attachments

        1. test.cc
          2 kB
          Leif Hedstrom
        2. ts-507-patch.txt
          0.3 kB
          Alan M. Carroll

        Activity

          People

            amc Alan M. Carroll
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: