TS-507 Less strict tests on Content-Length header and connection close.

A separate bug will be filed to add a feature to try to close UA
connections early when appropriate / possible.

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1032674 13f79535-47bb-0310-9956-ffa450edef68